--- a/src/views/Login/Login.css
+++ b/src/views/Login/Login.css
@@ -13,6 +13,7 @@
   width: 400px;
   background: #ffffff;
   padding: 30px;
+  margin: 20px;
   border-radius: 16px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
   border-top: 6px solid #ec4899; 
